[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/assets/PressStart.tres" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/LevelUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="LevelUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTimer" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "0:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
